实现重试机制，正确读取header